y3/jpp/assignment-interpreter/luna/examples/bad/02-03-ass-diff-type.luna
var x: int = 5;

x = "hi"
